--- a/src/WebApi/appsettings.json
+++ b/src/WebApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SalaoSensie": "Server=localhost,1433;Database=salao-sensie;User Id=sa;Password=SqlServer?!;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
